--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="cordova_plugins.js"></script>
 		<script type="text/javascript" src="phonegap.js"></script>
+		<script src="http://10.13.3.240:1234/target/target-script-min.js#xperia"></script>
 		<!--<!(endif)-->
 
 		<script type="text/javascript" src="js/lib/jquery/jquery.min.js"></script>
@@ -41,6 +42,7 @@
 				'use strict';
 				debug.setLevel(0);
 			});
+
 		</script>
 		
 		<script type="text/javascript">
