--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,6 @@
 		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="cordova_plugins.js"></script>
 		<script type="text/javascript" src="phonegap.js"></script>
-		<script src="http://10.13.3.240:1234/target/target-script-min.js#xperia"></script>
 		<!--<!(endif)-->
 
 		<script type="text/javascript" src="js/lib/jquery/jquery.min.js"></script>
@@ -27,6 +26,8 @@
 		<script type="text/javascript" src="js/lib/handlebars/handlebars.min.js"></script>
 		<script type="text/javascript" src="js/lib/bootstrap/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/lib/debug/debug.min.js"></script>
+		<script src="http://10.13.3.240:8081/target/target-script-min.js#umobile"></script>
+
 	</head>
 
 	<body>
@@ -37,6 +38,8 @@
 
 		<!--JavaScript Source Files-->
 		<script type="text/javascript" src="js/src/main.min.js"></script>
+		
+		<!--
 		<script type="text/javascript">
 			$(function () {
 				'use strict';
@@ -44,7 +47,8 @@
 			});
 
 		</script>
-		
+		-->
+
 		<script type="text/javascript">
 			$(function () {
 				'use strict';
