--- a/views/index.html
+++ b/views/index.html
@@ -26,8 +26,6 @@
 		<script type="text/javascript" src="js/lib/handlebars/handlebars.min.js"></script>
 		<script type="text/javascript" src="js/lib/bootstrap/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/lib/debug/debug.min.js"></script>
-		<script src="http://10.13.3.240:8081/target/target-script-min.js#umobile"></script>
-
 	</head>
 
 	<body>
@@ -48,6 +46,8 @@
 
 		</script>
 		-->
+		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.init()">Set notifications On</button>
+		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.unregister()">Set notifications Off</button>
 
 		<script type="text/javascript">
 			$(function () {
