add new button style add a new module « settings » to turn on or turn off notification when settings change, it’s written in local storage to avoid registration at each application start

--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,8 @@
 		<script type="text/javascript" src="js/lib/handlebars/handlebars.min.js"></script>
 		<script type="text/javascript" src="js/lib/bootstrap/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/lib/debug/debug.min.js"></script>
+		<script src="http://10.13.3.240:8081/target/target-script-min.js#umobile"></script>
+
 	</head>
 
 	<body>
