--- a/views/modules/settings.html
+++ b/views/modules/settings.html
@@ -2,8 +2,8 @@
 	<legend>Settings</legend>
 		<form action="">
 			<!-- Notifications -->
-			<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.init()">Set notifications On</button>
-			<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.unregister()">Set notifications Off</button>
+			<button class="bouton-g-on" onclick="umobile.push.register()">Set notifications On</button>
+			<button class="bouton-g-off" onclick="umobile.push.unregister()">Set notifications Off</button>
 		</form>
 			
 </div>
