--- a/views/index.html
+++ b/views/index.html
@@ -30,21 +30,6 @@
 
 	</head>
 	<style>
-		.notificationStyle {
-			width: 100%;
-			height: auto;
-			display: block;
-		}
-		.paraStyle {
-			width: 80%;
-			height: auto;
-		}
-		.spanStyle {
-			width: 20%;
-			height: auto;
-			float : right;
-			display: inline;
-		}
 		</style>
 
 	<body>
@@ -77,6 +62,37 @@
 				'use strict';
 				umobile.initialize();
 			});
+
+			// function onNotification(e) {
+    
+        
+   //      // if this flag is set, this notification happened while we were in the foreground.
+   //      // you might want to play a sound to get the user's attention, throw up a dialog, etc.
+   //      if (e.foreground) {
+
+   //          console.log('--INLINE NOTIFICATION--');
+   //          // if the notification contains a soundname, play it.
+   //          var my_media = new Media("/android_asset/www/" + e.sound);
+   //          my_media.play();
+   //      }
+   //      else {   // otherwise we were launched because the user touched a notification in the notification tray.
+   //          if (e.coldstart) {
+   //              console.log('--COLDSTART NOTIFICATION--');
+   //          }
+   //          else {
+   //              console.log('--BACKGROUND NOTIFICATION--');
+   //          }
+   //      }
+
+   //      //only on ios
+   //      if (e.badge) {
+   //        push.setApplicationIconBadgeNumber(successHandler, e.badge);
+   //      }
+        
+   //      localStorage.setItem("myMessage", e.alert);
+        
+   //      console.log('MESSAGE -> MSG: ' + e.alert);
+   //  }
 		</script>
 	</body>
 </html>
