--- a/views/index.html
+++ b/views/index.html
@@ -52,10 +52,14 @@
 		-->
 
 		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.register()">Set notifications On</button>
+		
 		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.unregister()">Set notifications Off</button>
+		
 		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.removeHistory()">Remove notifications history</button>
 
 		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.displayHistory()">Display history</button>
+		
+		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.refreshHistory()">Refresh history</button>
 
 		<script type="text/javascript">
 			$(function () {
