add page witch displays notifications
add page witch displays notifications

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -16,5 +16,8 @@
 		<a id="loginButton" href="#login" class="btn btn-link um-btn-login hidden">
 			<i class="icon-lock icon-white"></i>
 		</a>
+		<a id="notificationButton" href="#notification" class="btn btn-link um-btn-notification hidden">
+			<i class="icon-list icon-white"></i>
+		</a>
 	</div>
 </div>
