--- a/views/index.html
+++ b/views/index.html
@@ -52,13 +52,13 @@
 		</script>
 		-->
 
-		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.register()">Set notifications On</button>
+		<!-- <button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.register()">Set notifications On</button>
 		
 		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.unregister()">Set notifications Off</button>
 		
 		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.remove()">Remove all </button>
 
-		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.get()">Refresh history</button>
+		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.get()">Refresh history</button> -->
 
 		<!-- <button class="btn btn-inverse um-btn-inverse" style="display : block; margin-top:15px;" onclick="umobile.push.socket()">Socket</button> -->
 		
