--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -40,5 +40,12 @@
 			top: 0; right: 10px;
 			margin-top: 6px;
 		}
+
+		// Notification button
+		.um-btn-notification {
+			position: absolute;
+			top: 0; right: 40px;
+			margin-top: 6px;
+		}
 	}
 }
