--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -1,4 +1,4 @@
-<div>
+<div class="um-notification-option">
 	<button id="setOnButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.register()">Set On</button>
 
 	<button id="setOffButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.unregister()">Set Off</button>
@@ -6,6 +6,4 @@
 	<button id="removeButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.remove()">Remove</button>
 
 	<button id="refreshOnButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.get()">Refresh</button>
-	
 </div>
-
