--- a/src/less/umobile.less
+++ b/src/less/umobile.less
@@ -24,6 +24,7 @@
 @import "./layout/dashboard.less";
 @import "./layout/module.less";
 @import "./layout/login.less";
+@import "./layout/notification.less";
 
 // Theme Rules
 //@import "./themes/bloom/bloom.less";
