--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -1,9 +1,9 @@
 <div class="um-notification-option">
-	<button id="setOnButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.register()">Set On</button>
+	<button id="setOnButton" class="btn btn-inverse um-btn-inverse">Set On</button>
 
-	<button id="setOffButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.unregister()">Set Off</button>
+	<button id="setOffButton" class="btn btn-inverse um-btn-inverse">Set Off</button>
 
-	<button id="removeButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.remove()">Remove</button>
+	<button id="removeButton" class="btn btn-inverse um-btn-inverse">Remove</button>
 
-	<button id="refreshOnButton" class="btn btn-inverse um-btn-inverse" onclick="umobile.push.get()">Refresh</button>
+	<button id="refreshButton" class="btn btn-inverse um-btn-inverse">Refresh</button>
 </div>
