Socket io implementation
add plugin for device informations
add plugin for sockets
add socket io libs
add backbone-super.min.js

The application send an receipt

--- a/views/index.html
+++ b/views/index.html
@@ -52,15 +52,7 @@
 		</script>
 		-->
 
-		<!-- <button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.register()">Set notifications On</button>
-		
-		<button class="btn btn-inverse um-btn-inverse" style="display : block; margin-bottom:15px;" onclick="umobile.push.unregister()">Set notifications Off</button>
-		
-		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.remove()">Remove all </button>
-
-		<button class="btn btn-inverse um-btn-inverse" onclick="umobile.push.get()">Refresh history</button> -->
-
-		<!-- <button class="btn btn-inverse um-btn-inverse" style="display : block; margin-top:15px;" onclick="umobile.push.socket()">Socket</button> -->
+		<p><input type="button" class="btn btn-inverse um-btn-inverse" value="Embêter le serveur" id="poke" /></p>
 		
 		<script type="text/javascript">
 			$(function () {
