--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -7,3 +7,7 @@
 
 	<button id="refreshButton" class="btn btn-inverse um-btn-inverse">Refresh</button>
 </div>
+
+<div id="notifications" class="um-module-container">
+	<ul id="notificationList"></ul>
+</div>
