--- a/src/less/layout/notification.less
+++ b/src/less/layout/notification.less
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 .um-notification-area {
 	margin-left : 10px;
+	list-style-type:none;
 }
 
 .um-notification-option {
