--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -8,6 +8,6 @@
 	<button id="refreshButton" class="btn btn-inverse um-btn-inverse">Refresh</button>
 </div>
 
-<div id="notifications" class="um-module-container">
-	<ul id="notificationList"></ul>
+<div id="notifications">
+	<ul id="notificationList" class="um-notification-area"></ul>
 </div>
