Notifications push fonctionnelles avec le plugin org.jboss.aerogear.cordova.push v 0.5.0

--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -1,7 +1,7 @@
 <div class="um-notification-option">
-	<button id="setOnButton" class="btn btn-inverse um-btn-inverse">Set On</button>
+	<button id="buttonOn" class="btn btn-inverse um-btn-inverse">Set On</button>
 
-	<button id="setOffButton" class="btn btn-inverse um-btn-inverse">Set Off</button>
+	<button id="buttonOff" class="btn btn-inverse um-btn-inverse">Set Off</button>
 
 	<button id="removeButton" class="btn btn-inverse um-btn-inverse">Remove</button>
 
