--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -3,9 +3,7 @@
 
 	<button id="buttonOff" class="btn btn-inverse um-btn-inverse">Set Off</button>
 
-	<button id="removeButton" class="btn btn-inverse um-btn-inverse">Remove</button>
-
-	<button id="refreshButton" class="btn btn-inverse um-btn-inverse">Refresh</button>
+	<button id="buttonRemove" class="btn btn-inverse um-btn-inverse">Remove</button>
 </div>
 
 <div id="notifications">
