Clean code Add an empty view when there is no notification Use loadScript for Utils

--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
 		</script>
 		-->
 
-		<!-- <p><input type="button" class="btn btn-inverse um-btn-inverse" value="Embêter le serveur" id="poke" /></p> -->
+		<p><input type="button" class="btn btn-inverse um-btn-inverse" value="Embêter le serveur" id="poke" /></p>
 		
 		<script type="text/javascript">
 			$(function () {
