--- a/views/partials/notificationview.html
+++ b/views/partials/notificationview.html
@@ -8,4 +8,5 @@
 
 <div id="notifications">
 	<ul id="notificationList" class="um-notification-area"></ul>
+	<div id="notificationE" class="um-notification-empty"></div>
 </div>
